force-app/main/default/objects/Survey_Results__c/fields/A1__c.field-meta.xml
<CustomField>
    <fullName>A1__c</fullName>
    <label>A1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>