force-app/main/default/objects/Survey_Results__c/fields/A3__c.field-meta.xml
<CustomField>
    <fullName>A3__c</fullName>
    <label>A3</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>