force-app/main/default/objects/Survey_Results__c/fields/A5__c.field-meta.xml
<CustomField>
    <fullName>A5__c</fullName>
    <label>A5</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>