force-app/main/default/objects/Survey_Results__c/fields/Accommodation__c.field-meta.xml
<CustomField>
    <fullName>Accommodation__c</fullName>
    <formula>CASE(MID(Survey_Response__c, 6, 1),
&quot;1&quot;, &quot;1-Poor&quot;,
&quot;2&quot;, &quot;2-Satisfactory&quot;,
&quot;3&quot;, &quot;3-Excellent&quot;,
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>How would you rate the overall quality of the accommodation?</inlineHelpText>
    <label>Accommodation</label>
    <type>Text</type>
</CustomField>