force-app/main/default/objects/Survey_Results__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <formula>IF(TAD_Order__r.Is_Qf_Order__c=true,&apos;Qantas&apos;, &apos;TripADeal&apos;)</formula>
    <label>Company</label>
    <type>Text</type>
</CustomField>