force-app/main/default/objects/Survey_Results__c/fields/Creation_Diffrence__c.field-meta.xml
<CustomField>
    <fullName>Creation_Diffrence__c</fullName>
    <formula>DATEVALUE(CreatedDate) - TAD_Order__r.ordexp_final_return_date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Creation Diffrence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>