force-app/main/default/objects/Survey_Results__c/fields/Cruise__c.field-meta.xml
<CustomField>
    <fullName>Cruise__c</fullName>
    <formula>CASE(MID(Survey_Response__c, 16, 1),
&quot;0&quot;, &quot;0-NotApplicable&quot;,
&quot;1&quot;, &quot;1-Poor&quot;,
&quot;2&quot;, &quot;2-Satisfactory&quot;,
&quot;3&quot;, &quot;3-Excellent&quot;,
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>How would you rate the onboard cruise experience?</inlineHelpText>
    <label>Cruise</label>
    <type>Text</type>
</CustomField>