force-app/main/default/objects/Survey_Results__c/fields/Deal_ID_Title__c.field-meta.xml
<CustomField>
    <fullName>Deal_ID_Title__c</fullName>
    <formula>TAD_Order__r.ordexp_deal_id_title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal ID &amp; Title</label>
    <type>Text</type>
</CustomField>