force-app/main/default/objects/Survey_Results__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>TAD Order Owner Email Id</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>