force-app/main/default/objects/Survey_Results__c/fields/Flights__c.field-meta.xml
<CustomField>
    <fullName>Flights__c</fullName>
    <formula>CASE(MID(Survey_Response__c, 12, 1),
&quot;0&quot;, &quot;0-NotApplicable&quot;,
&quot;1&quot;, &quot;1-Poor&quot;,
&quot;2&quot;, &quot;2-Satisfactory&quot;,
&quot;3&quot;, &quot;3-Excellent&quot;,
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>How was your flight including schedule, stopovers, airline quality?</inlineHelpText>
    <label>Flights</label>
    <type>Text</type>
</CustomField>