force-app/main/default/objects/Survey_Results__c/fields/Is_filled_within_6_days__c.field-meta.xml
<CustomField>
    <fullName>Is_filled_within_6_days__c</fullName>
    <formula>IF(  (  DATEVALUE(CreatedDate) - TAD_Order__r.ordexp_final_return_date__c ) &lt;= 6 &amp;&amp; TAD_Order__r.ordexp_final_departure_date__c &gt;  DATE(2023,10,01) &amp;&amp;  (RecordType.Name= &apos;Feefo&apos; || RecordType.Name= &apos;Qualtrics&apos;) , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is filled within 6 days?</label>
    <type>Checkbox</type>
</CustomField>