force-app/main/default/objects/Survey_Results__c/fields/Is_Qualtrics_Feefo__c.field-meta.xml
<CustomField>
    <fullName>Is_Qualtrics_Feefo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Qualtrics Feefo?</label>
    <type>Checkbox</type>
</CustomField>