force-app/main/default/objects/Survey_Results__c/fields/Is_return_from_journey__c.field-meta.xml
<CustomField>
    <fullName>Is_return_from_journey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is return from journey?</label>
    <type>Checkbox</type>
</CustomField>