force-app/main/default/objects/Survey_Results__c/fields/Itinerary_and_Duration__c.field-meta.xml
<CustomField>
    <fullName>Itinerary_and_Duration__c</fullName>
    <formula>CASE(MID(Survey_Response__c, 4, 1),
&quot;0&quot;, &quot;0-NotApplicable&quot;,
&quot;1&quot;, &quot;1-Poor&quot;,
&quot;2&quot;, &quot;2-Satisfactory&quot;,
&quot;3&quot;, &quot;3-Excellent&quot;,
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>How was the overall pace and duration of the trip?</inlineHelpText>
    <label>Itinerary and Duration</label>
    <type>Text</type>
</CustomField>