force-app/main/default/objects/Survey_Results__c/fields/Overall_Comments__c.field-meta.xml
<CustomField>
    <fullName>Overall_Comments__c</fullName>
    <label>Overall Comments</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>