force-app/main/default/objects/Survey_Results__c/fields/Overall_Star_Rating__c.field-meta.xml
<CustomField>
    <fullName>Overall_Star_Rating__c</fullName>
    <label>Overall Star Rating</label>
    <length>10</length>
    <type>Text</type>
</CustomField>