force-app/main/default/objects/Survey_Results__c/fields/Pre_departure_Communication__c.field-meta.xml
<CustomField>
    <fullName>Pre_departure_Communication__c</fullName>
    <formula>CASE(MID(Survey_Response__c, 18, 1),
&quot;1&quot;, &quot;1-Poor&quot;,
&quot;2&quot;, &quot;2-Satisfactory&quot;,
&quot;3&quot;, &quot;3-Excellent&quot;,
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>How would you rate the pre-departure communications to prepare you for the trip?</inlineHelpText>
    <label>Pre-departure Communication</label>
    <type>Text</type>
</CustomField>