force-app/main/default/objects/Survey_Results__c/fields/Q1__c.field-meta.xml
<CustomField>
    <fullName>Q1__c</fullName>
    <label>Q1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>