force-app/main/default/objects/Survey_Results__c/fields/Q2__c.field-meta.xml
<CustomField>
    <fullName>Q2__c</fullName>
    <label>Q2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>