force-app/main/default/objects/Survey_Results__c/fields/Q4__c.field-meta.xml
<CustomField>
    <fullName>Q4__c</fullName>
    <label>Q4</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>