force-app/main/default/objects/Survey_Results__c/fields/Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Recommendation__c</fullName>
    <formula>CASE(MID(Survey_Response__c, 1, 2),
&quot;01&quot;, &quot;1&quot;,
&quot;02&quot;, &quot;2&quot;,
&quot;03&quot;, &quot;3&quot;,
&quot;04&quot;, &quot;4&quot;,
&quot;05&quot;, &quot;5&quot;,
&quot;06&quot;, &quot;6&quot;,
&quot;07&quot;, &quot;7&quot;,
&quot;08&quot;, &quot;8&quot;,
&quot;09&quot;, &quot;9&quot;,
&quot;10&quot;,&quot;10&quot;,
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>On a scale of 1 - 10 how likely would you be to recommend TripADeal to friends and family?</inlineHelpText>
    <label>Recommendation</label>
    <type>Text</type>
</CustomField>