force-app/main/default/objects/Survey_Results__c/fields/Star_Rating_Number__c.field-meta.xml
<CustomField>
    <fullName>Star_Rating_Number__c</fullName>
    <formula>VALUE ( Overall_Star_Rating__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Star Rating (Number)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>