force-app/main/default/objects/Survey_Results__c/fields/TAD_Order_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>TAD_Order_Record_Type__c</fullName>
    <formula>TAD_Order__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TAD Order Record Type</label>
    <type>Text</type>
</CustomField>