force-app/main/default/objects/Survey_Results__c/fields/Tour_Guide_Driver_On_Tour_Services__c.field-meta.xml
<CustomField>
    <fullName>Tour_Guide_Driver_On_Tour_Services__c</fullName>
    <formula>CASE(MID(Survey_Response__c, 10, 1),
&quot;0&quot;, &quot;0-NotApplicable&quot;,
&quot;1&quot;, &quot;1-Poor&quot;,
&quot;2&quot;, &quot;2-Satisfactory&quot;,
&quot;3&quot;, &quot;3-Excellent&quot;,
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>How was the quality of service offered by guides?</inlineHelpText>
    <label>Tour Guide / Driver / On Tour Services</label>
    <type>Text</type>
</CustomField>