force-app/main/default/objects/Survey_Results__c/fields/Transportation__c.field-meta.xml
<CustomField>
    <fullName>Transportation__c</fullName>
    <formula>CASE(MID(Survey_Response__c, 14, 1),
&quot;0&quot;, &quot;0-NotApplicable&quot;,
&quot;1&quot;, &quot;1-Poor&quot;,
&quot;2&quot;, &quot;2-Satisfactory&quot;,
&quot;3&quot;, &quot;3-Excellent&quot;,
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>How was your transportation such as transfers, shuttles and buses?</inlineHelpText>
    <label>Transportation</label>
    <type>Text</type>
</CustomField>