force-app/main/default/objects/Survey_Results__c/fields/Value_for_Money__c.field-meta.xml
<CustomField>
    <fullName>Value_for_Money__c</fullName>
    <formula>CASE(MID(Survey_Response__c, 20, 1),
&quot;1&quot;, &quot;1-Poor&quot;,
&quot;2&quot;, &quot;2-Satisfactory&quot;,
&quot;3&quot;, &quot;3-Excellent&quot;,
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>How would you rate the value for money on your trip?</inlineHelpText>
    <label>Value for Money</label>
    <type>Text</type>
</CustomField>