force-app/main/default/objects/Survey_Results__c/recordTypes/Feefo.recordType-meta.xml
<RecordType>
    <fullName>Feefo</fullName>
    <active>true</active>
    <label>Feefo</label>
</RecordType>