force-app/main/default/objects/Survey_Results__c/recordTypes/NPS_Offload.recordType-meta.xml
<RecordType>
    <fullName>NPS_Offload</fullName>
    <active>true</active>
    <label>NPS Offload</label>
</RecordType>