force-app/main/default/objects/Survey_Results__c/recordTypes/NPS_Phone.recordType-meta.xml
<RecordType>
    <fullName>NPS_Phone</fullName>
    <active>true</active>
    <label>NPS Phone</label>
</RecordType>