force-app/main/default/objects/Survey_Results__c/recordTypes/NPS_Web.recordType-meta.xml
<RecordType>
    <fullName>NPS_Web</fullName>
    <active>true</active>
    <label>NPS Web</label>
</RecordType>