force-app/main/default/objects/Survey_Results__c/recordTypes/Qualtrics.recordType-meta.xml
<RecordType>
    <fullName>Qualtrics</fullName>
    <active>true</active>
    <label>Qualtrics</label>
</RecordType>