force-app/main/default/objects/Survey_Results__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>TAD_Order__c</columns>
    <columns>Deal_ID_Title__c</columns>
    <columns>Overall_Comments__c</columns>
    <columns>Overall_Star_Rating__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>