force-app/main/default/objects/Survey_Results__c/listViews/Test_Feefo_Reviews.listView-meta.xml
<ListView>
    <fullName>Test_Feefo_Reviews</fullName>
    <booleanFilter>1 AND (2 OR 3)</booleanFilter>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>TAD_Order__c</columns>
    <columns>Deal_ID_Title__c</columns>
    <columns>Overall_Comments__c</columns>
    <columns>Overall_Star_Rating__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>10/14/2022 12:00 AM</value>
    </filters>
    <filters>
        <field>Account_Name__c</field>
        <operation>contains</operation>
        <value>test</value>
    </filters>
    <filters>
        <field>Account_Name__c</field>
        <operation>contains</operation>
        <value>samriddh</value>
    </filters>
    <label>Test Feefo Reviews</label>
</ListView>